# hydros-python-sdk

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGES_SUMMARY.md  CLAUDE.md  CONFIG_SIMPLIFICATION.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  ERROR_HANDLING_IMPLEMENTATION_REPORT.md  ERROR_HANDLING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_AGENT_PROPERTIES.md  LOGGING_IMPLEMENTATION_SUMMARY.md  LOG_FORMAT_OPTIMIZATION.md  MIGRATION_NOTES.md  PROJECT_GUIDE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETE_SUMMARY.md  REFACTORING_CONFIG.md  REFACTORING_INHERITANCE.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  TESTING_GUIDE.md  _upd_init.py  build_binaries.sh  deploy.sh  modify_yaml.py  project_overview.sh  pyproject.toml  requirements.txt  rewrite_agent.py  run_cli.py  test_refactoring.py  verify_implementation.sh  verify_refactoring.py
.claude/: settings.local.json
agent_workspace/: INDEX.md  README.md
custom-agent/: README.md  multi_agent_launcher.py  start_agents.sh
data/: config.json  inflow-demand-plan.xlsx  mpc_config.yaml  station1-tableE.xlsx  station1-tableR.xlsx  station2-tableE.xlsx  station2-tableR.xlsx  station3-tableE.xlsx  station3-tableR.xlsx
docs/: AGENT_CONFIG.md  AGENT_PROPERTIES.md  CONTRACT_SYNC.md  ERROR_HANDLING.md  HYDRO_OBJECT_UTILS.md  HYDRO_OBJECT_UTILS_QUICK_REF.md  LOGGING.md  MQTT_METRICS.md  README.md  TESTING_BASELINE.md  快速参考.md  故障排查指南.md  文档创建总结.md  新手智能体开发指南.md  智能体类型对比.md
examples/: 11150大渡河智能体.json  AGENT_CONFIG.md  CHANGELOG.md  COMPLETION_SUMMARY.md  DEBUG_GUIDE.md  ENV_CONFIG.md  ENV_SEPARATION_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  agent.properties  agent_example.py  configurable_agent.py  convert.py  coordination_logging_example.py  env.properties  error_handling_example.py  generate_context.py  hydro_object_utils_example.py  load_agent_config.py  logging_example.py  mqtt_metrics_example.py  multi_agent_launcher.py  output.yaml  start_agents.sh  test_env.py  validate_config.py  validate_system.py
hydros_agent_sdk/: __init__.py  agent_config.py  agent_constants.py  agent_properties.py  base_agent.py  callback.py  config_loader.py  context_manager.py  coordination_callback.py  coordination_client.py  developer_api.py  error_codes.py  error_handling.py  factory.py  field_metrics_cache.py  logging_config.py  message_filter.py  mqtt.py  multi_agent.py  observability.py  scenario_config.py  scheduling_task_state.py  scheduling_task_state_lifecycle.py  sensor_data.py  state_manager.py  topics.py  version.py
hydros_sdk/: __init__.py  cli.py  core.py  mqtt.py
output/: Station1_Pump1_Pump2_Pump3_Pump4_Pump5_flow_depart.xlsx  Station2_Pump1_Pump2_Pump3_Pump4_flow_depart.xlsx  Station3_pump1_pump2_pump3_pump4_flow_depart.xlsx
scripts/: contract_ai_review_gate.py  contract_sync_snapshot.py  publish.sh  run_test_baseline.py
tests/: conftest.py  manual_mqtt_stub.py  send_test_message.py  test_agent_commands_refactor.py  test_agent_config.py  test_agent_instance_status_support.py  test_agent_properties.py  test_agent_properties_simple.py  test_base_agent_config.py  test_canonical_contract.py  test_central_scheduling_event_injection.py  test_central_scheduling_inheritance.py  test_contract_ai_review_gate.py  test_contract_sync_snapshot.py  test_control_algorithm_contract_probe.py  test_control_algorithm_http_service.py  test_control_algorithms.py  test_control_execution_barrier.py  test_core.py  test_developer_api.py  (+54 more)
(+348 files in other folders)
