[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydros-agent-sdk"
version = "0.1.7"
description = "Official Python SDK for the Hydros ecosystem: Simulation Agents and MQTT Protocol"
readme = "README.md"
dependencies = [
    "paho-mqtt>=1.6.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0"
]
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "User Name", email = "weijiahao001@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
hydros-agent = "hydros_agent_sdk.launcher.cli:main"

[project.optional-dependencies]
debug = [
    "debugpy>=1.8.0",
]
build = [
    "build>=1.0.0",
    "twine>=5.0.0",
]
examples = [
    "debugpy>=1.8.0",
]
pump = [
    "numpy>=2.2.0",
    "pandas>=2.3.0",
    "scipy>=1.16.0",
    "scikit-learn>=1.6.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.10.0",
    "pyomo>=6.9.0",
    "sympy>=1.14.0",
    "mpmath>=1.3.0",
]
power = [
    "numpy>=2.2.0",
    "pandas>=2.3.0",
    "scipy>=1.16.0",
    "matplotlib>=3.10.0",
    "sympy>=1.14.0",
    "mpmath>=1.3.0",
]
dev = [
    "build>=1.0.0",
    "twine>=5.0.0",
    "debugpy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
